# social-game

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.chatgpt.txt  requirements.dev.txt  requirements.txt  sg
.githooks/: commit-msg
.github/agents/: adr-agent.agent.md  refactoring-agent.agent.md  requirements-agent.agent.md  review-code-agent.agent.md  scene-description-agent.agent.md
.github/workflows/: publish-container.yml
doc/adr/: 001-test-strategie.md  002-datenspeicherung-data-verzeichnis.md  003-synchroner-update-orchestrator.md  004-modellstrategie.md  005-manuelle-e2e-pruefung-statt-integrationstest.md  006-rolling-releases-ohne-kompatibilitaetsschichten.md  007-ui-architektur-mit-web-components.md  (+4 more)
engine/: cli.py  config.py  fs_utils.py  llm_client.py  logger.py  logging.py  models.py  storage.py
prompts/: chat_general_rules.md  etm_update.md  image_build_prompt.md  image_refresh.md  image_scene.md  ltm_summary.md  scene_update.md  state_update.md
tests/: fakes.py  test_character_image_service.py  test_cli.py  test_config.py  test_etm_retrieval_service.py  test_etm_service.py  test_etm_vector_store.py  test_image_updater.py  test_llm_client.py  test_llm_error_utils.py  test_logging.py  test_ltm_service.py  test_npc_turn_service.py  test_path_resolver.py  test_scene_update_service.py  test_scheduler.py  test_session_store.py  test_state_update_service.py  test_storage.py  test_stores.py  test_web_app.py  test_web_static_contracts.py
(+157 files in other folders)
